--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
 
 		<div id="footer">
 		</div>
-
+		
+		<div id="Ethnic Enrollment">
+			<p class="Ethnictitle"> Purdue Ethnic Enrollment </p>	
+			<p> My team selected the No 3 "This is about the student enrollment at Purdue in fall, 2014" among 11 potential data sources. After looking at the data, we were interesting about the configuration and change of ethnics over years at Purdue. </p>
+		</div>
+		
+		<div id="button">
+			<a href="http://kbt-incorporated.github.io/EthnicEnrollment/ethnicEnrollment.html"> Purdue Ethnic Enrollment </a>
+		</div>
 	</body>
 </html>
