--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 			<h2> KBT-incorporated </h2>
 		</div>
 		
+		<div>
+	        <ul id="navbar">
+				<li id="currentpage"> Home </li>
+				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html">Data Sets</a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="PurdueDemographics/purdueDemographics.html">Purdue Demographics</a> </li>
+			</ul>
+		</div>
+		
 		<div id="table"> 	
 	        <table id = "tableConf">
 	        	<p> Team members </p>
