--- a/EthnicEnrollment/ethnicEnrollment.html
+++ b/EthnicEnrollment/ethnicEnrollment.html
@@ -15,7 +15,7 @@
 	        <ul id="navbar">
 				<li id="navlinkspace"> <a id="navlink" href="../index.html">Home</a> </li>
 				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html">Data Sets</a> </li>
-				<li id="currentpage"> Purdue Demographics </li>
+				<li id="currentpage"> Ethnic Enrollment </li>
 			</ul>
  		</div>
 		
