--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	        <ul id="navbar">
 				<li id="currentpage"> Home </li>
 				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html">Data Sets</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="EthnicEnrollment/ethnicEnrollment.html">Ethnic Enrollment</a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="http://kbt-incorporated.github.io/EthnicEnrollment/ethnicEnrollment.html">Ethnic Enrollment</a> </li>
 			</ul>
 		</div>
 		
