Standardized formatting and fixed css
The css for the tableau vis is fixed (now it styles the page), the vis
is centered, and the navbars all look the same now.
The names of some links have been changed.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	        <ul id="navbar">
 				<li id="currentpage"> Home </li>
 				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html">Data Sets</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="http://kbt-incorporated.github.io/EthnicEnrollment/ethnicEnrollment.html"> Purdue Demographics </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
 			</ul>
 		</div>
 		
