--- a/PurdueDemographics/purdueDemographics.html
+++ b/PurdueDemographics/purdueDemographics.html
@@ -21,6 +21,11 @@
 		
  		<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 		<div id="tableauvis" class='tableauPlaceholder' style='width: 1020px; height: 1034px;'><noscript><a href='#'><img alt='Purdue Student Enrollment ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pu&#47;Purduestudentenrollmentnumbers&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1020' height='1034' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Purduestudentenrollmentnumbers&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pu&#47;Purduestudentenrollmentnumbers&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /></object></div>
+
+ 		<div id="header">
+			<h2> The whole story of the Purdue Demographics </h2>
+			<p> My team selected the No 3 "This is about the student enrollment at Purdue in fall, 2014" among 11 potential data sources. After looking at the data, we were interesting about the configuration and change of ethnics over years at Purdue.  After visualizing the ethnic enrollment over year at Purdue, we found that the percentage of Asian students keeps constant between 6% and 7%.  However, we were curious about the results since we knew that the number of students for china have rapidly increased in the past few years. So, we surveyed the change of number of international student over years, and we found that the percentage of students from china are increasing in the past few years and the percentage of students from other countries are decreasing in the past years. </p>
+		</div>
 		
 		<div id="bottom">		
 		</div>
