--- a/PurdueDemographics/purdueDemographics.html
+++ b/PurdueDemographics/purdueDemographics.html
@@ -13,9 +13,10 @@
 		
 		<div>
 	        <ul id="navbar">
-				<li id="navlinkspace"> <a id="navlink" href="../index.html">Home</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html">Data Sets</a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../index.html"> Home </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html"> Data Sets </a> </li>
 				<li id="currentpage"> Purdue Demographics </li>
+				<li id="navlinkspace"> <a id="navlink" href="../Final/final.html"> TBD </a> </li>
 			</ul>
  		</div>
 		
