--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		<div>
 	        <ul id="navbar">
 				<li id="currentpage"> Home </li>
-				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html">Data Sets</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html"> Data Sets </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="Final/final.html"> TBD </a> </li>
 			</ul>
 		</div>
 		
