--- a/DataSets/dataSets.html
+++ b/DataSets/dataSets.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="../css/masterStyleSheet.css"/>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 		<title> Data Sets </title>
 	</head>
 	<body>
 		
 		<div id="header">
-			<h2> Data Sets </h2>
+			<h2 id ="headertext"> Data Sets </h2>
 		</div>
 		
 		<div>
