--- a/Final/final.html
+++ b/Final/final.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="../css/masterStyleSheet.css"/>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 		<title> TBD </title>
 	</head>
 	<body>
 		
 		<div id="header">
-			<h2> TBD </h2>
+			<h2 id="headertext"> TBD </h2>
 		</div>
 		
 		<div>
 	        <ul id="navbar">
-				<li id="navlinkspace"> <a id="navlink" href="../index.html">Home</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html">Data Sets</a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../index.html"> Home </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html"> Data Sets </a> </li>
 				<li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
 				<li id="currentpage"> TBD </li>
 			</ul>
