--- a/PurdueDemographics/purdueDemographics.html
+++ b/PurdueDemographics/purdueDemographics.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
  <html>
  	<head>
- 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/masterStyleSheet.css"/>
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
  		<title>Purdue Demographics</title>
  	</head>
 
  	<body>
  	
  		<div id="header">
-			<h2> Purdue Demographics </h2>
+			<h2 id="headertext"> Purdue Demographics </h2>
 		</div>
 		
 		<div>
