--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="css/masterStyleSheet.css"/>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 		<title>Team Webpage</title>
 	</head>
 	<body>
 		
 		<div id="header">
-			<h2> KBT-incorporated </h2>
+			<h2 id="headertext"> KBT-incorporated </h2>
 		</div>
 		
 		<div>
