--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	
 	<script type="text/javascript">
     		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    		var disqus_shortname = '<example>'; // Required - Replace '<example>' with your forum shortname
+    		var disqus_shortname = 'visualizationproject'; // Required - Replace '<example>' with your forum shortname
 
     		/* * * DON'T EDIT BELOW THIS LINE * * */
     		(function() {
