--- a/Project/index.html
+++ b/Project/index.html
@@ -372,7 +372,24 @@
         //if (d3.event) { d3.event.stopPropagation(); }
     }
 </script>
-
+    <script>
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : 'your-app-id',
+              xfbml      : true,
+              version    : 'v2.3'
+            });
+          };
+    
+          (function(d, s, id){
+             var js, fjs = d.getElementsByTagName(s)[0];
+             if (d.getElementById(id)) {return;}
+             js = d.createElement(s); js.id = id;
+             js.src = "//connect.facebook.net/en_US/sdk.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+    </script>
+    
     <script>
         (function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
