--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li id="currentpage"> Home </li>
 				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html"> Data Sets </a> </li>
 				<li id="navlinkspace"> <a id="navlink" href="PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="Final/final.html"> TBD </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="Project/index.html"> Project </a> </li>
 			</ul>
 		</div>
 		
