--- a/Project/index.html
+++ b/Project/index.html
@@ -11,6 +11,7 @@
     <style type="text/css">
         
         body {
+                
             overflow: hidden;
             margin: 0;
             font-size: 12px;
@@ -104,6 +105,7 @@
     var headerColor = "#555555";
     var transitionDuration = 500;
     var root;
+    //var node;
     var node;
 
     var treemap = d3.layout.treemap()
