--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/masterStyleSheet.css"/>
-		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+		<!--<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>-->
 		<title>Team Webpage</title>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
