--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 		</div>
 		
 		<div id="footer">
+			<div id="button">
+				<a href="http://taejin0128.github.io/Bargraph/index1.html"> Go to Google Analytics Report </a>
+			</div>
 		</div>
 
 	</body>
