--- a/Google Analytics/index1.html
+++ b/Google Analytics/index1.html
@@ -78,7 +78,7 @@
 		
 		<div id="footer">
 			<div id="button">
-				<a href="http://taejin0128.github.io/Bargraph/index.html"> Go back to Original Webpage </a>
+				<a href="http://kbt-incorporated.github.io/index.html"> Go back to Original Webpage </a>
 			</div>
 		</div>
 		
