--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 	<head>
+		<meta charset="utf-8">
+    	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<link type="text/css" rel="stylesheet" href="css/masterStyleSheet.css"/>
 		<!--<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>-->
 		<title>Team Webpage</title>
     	<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-    	<style type="text/css">
+    	<!--<style type="text/css">
         
 	        body {
 	                
@@ -69,7 +71,7 @@
 	            font-size: 11px;
 	            cursor: pointer
 	        }
-	    </style>
+	    </style>-->
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
