--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		
 		<div id="footer">
 			<div id="button">
-				<a href="http://taejin0128.github.io/Bargraph/index1.html"> Go to Google Analytics Report </a>
+				<a href="http://kbt-incorporated.github.io/GoogleAnalytics/index1.html"> Go to Google Analytics Report </a>
 			</div>
 		</div>
 
