Google Analytics Data
The google analtyics data as of 16:45 on 4/12/2015 were added to the GA
html

--- a/GoogleAnalytics/index1.html
+++ b/GoogleAnalytics/index1.html
@@ -26,10 +26,10 @@
                 </tr>              
                 <tr>
                     <td class="subtitle"> # of sessions </td>
-                    <td> 5 </td>
+                    <td> 0 </td>
                     <td> 2 </td>
-                    <td> 1 </td>
-                    <td> 1 </td>
+                    <td> 5 </td>
+                    <td> 0 </td>
                 </tr>     
 	        </table>
 		</div>
@@ -46,10 +46,10 @@
                 </tr>              
                 <tr>
                     <td class="subtitle"> # of sessions </td>
-                    <td> 5 </td>
-                    <td> 2 </td>
-                    <td> 1 </td>
-                    <td> 1 </td>
+                    <td> 0 </td>
+                    <td> 0 </td>
+                    <td> 3 </td>
+                    <td> 4 </td>
                 </tr>     
 	        </table>
 		</div>
@@ -59,15 +59,17 @@
 	        	<p> Source </p>
 	        	<tr>
                     <td class="titleFirst"> Source </td>
-                    <td class="titleColumn"> forum.topic60197564.darodar.com / referral </td> 
-                    <td class="titleColumn"> m.facebook.com / referral </td> 
+                    <td class="titleColumn"> editors.choice61655445.hulfingtonpost.com / referral </td> 
+                    <td class="titleColumn"> yijisoo.github.io / referral </td> 
+					<td class="titleColumn"> googlsucks.com / referral </td>
                     <td class="titleColumn"> (direct) / (none) </td>  
                 </tr>              
                 <tr>
                     <td class="subtitle"> # of sessions </td>
-                    <td> 5 </td>
-                    <td> 3 </td>
+                    <td> 2 </td>
+                    <td> 2 </td>
                     <td> 1 </td>
+					<td> 2 </td>
                 </tr>     
 	        </table>
 		</div>
