--- a/DataSets/dataSets.html
+++ b/DataSets/dataSets.html
@@ -13,10 +13,10 @@
 		
 		<div>
 	        <ul id="navbar">
-				<li id="navlinkspace"> <a id="navlink" href="../index.html"> Home </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="http://kbt-incorporated.github.io"> Main </a> </li> 
+                <li id="navlinkspace"> <a id="navlink" href="../Introduction/index.html"> Team members </a> </li>
 				<li id="currentpage"> Data Sets </li>
-				<li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="../Final/final.html"> TBD </a> </li>
+				 <li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
 			</ul>
  		</div>
 		
