--- a/PurdueDemographics/purdueDemographics.html
+++ b/PurdueDemographics/purdueDemographics.html
@@ -12,8 +12,9 @@
 		
 		<div>
 	        <ul id="navbar">
-				<li id="navlinkspace"> <a id="navlink" href="../index.html">Home</a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html">Data Sets</a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../index.html"> Main </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../Introduction/index.html"> Team members </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html"> Data Sets </a> </li>
 				<li id="currentpage"> Purdue Demographics </li>
 			</ul>
 		</div>
