--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -2,17 +2,8 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/masterStyleSheet.css"/>
-		<!--<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>-->
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 		<title>Team Webpage</title>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-61655445-1', 'auto');
-			ga('send', 'pageview');
-		</script>
 	</head>
 	<body>
 		
@@ -22,10 +13,10 @@
 		
 		<div>
 	        <ul id="navbar">
-				<li id="currentpage"> Home </li>
-				<li id="navlinkspace"> <a id="navlink" href="DataSets/dataSets.html"> Data Sets </a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
-				<li id="navlinkspace"> <a id="navlink" href="Project/index.html"> Project </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../index.html"> Main </a> </li>	
+				<li id="currentpage"> Team members </li>
+				<li id="navlinkspace"> <a id="navlink" href="../DataSets/dataSets.html"> Data Sets </a> </li>
+				<li id="navlinkspace"> <a id="navlink" href="../PurdueDemographics/purdueDemographics.html"> Purdue Demographics </a> </li>
 			</ul>
 		</div>
 		
@@ -58,37 +49,16 @@
                 </tr>
 	        </table>
 		</div>
-<<<<<<< HEAD
-		
-=======
 
->>>>>>> origin/master
 		<div id="bottom">		
 		</div>
 		
-		<div id="disqus_thread">
-		</div>
+
 		
 		<div id="footer">
 		</div>
-<<<<<<< HEAD
-		
-=======
->>>>>>> origin/master
+
 	</body>
 	
-	<script type="text/javascript">
-    		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    		var disqus_shortname = 'visualizationproject'; // Required - Replace '<example>' with your forum shortname
-
-    		/* * * DON'T EDIT BELOW THIS LINE * * */
-    		(function() {
-        		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    			})();
-	</script>
-	
-	<noscript> Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript"> comments powered by Disqus.</a> </noscript>
 	
 </html>
