--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
           <h6>About</h6>
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <p>Have you ever wondered "why is my EE class meeting in Witherell? Who is using our building? How are the various majors distributed across campus?" Wonder no longer.This visualization collects all Purdue engineering courses in 2015 spring. We aim to provide a deeper insight into building usage of engineering department.</p>
-              <p>Let's see what's interesting here!</p>
-                <p>Leave your suggestions below for us so that we cn make it better!</p>
+              <p>Have you ever wondered "why is my EE class meeting in Witherell? Who is using our building? How are engineering students distributed across campus?" Wonder no longer. KBT Inc. presents the Purdue engineering courses treemap! Just choose a time, and let our custom sorting algorithm show you where you can find engineers on Purdue's campus.</p>
+              <p>Your insight and user experience are important to us. Please leave your thoughts and suggestions below!</p>
             </div>
         </div>
         </div>
@@ -60,11 +59,11 @@
           <h6>Heatmap</h6>
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <p>We are interested in how many people taking courses in each time slot. The first visualization below is named Heatmap.</p>
-              <p>Heatmap provides an overview of numbers of actual students in weekdays. X-axis represents hours and Y-axis represents weekdays.</p>
+              <p>This handy navigational tool doubles as a preview of what you will see in the treemap. The time slot's shade tells you how many total engineering students are registered for classes at that time.</p>
+              <p>As you can see, the time slots are sorted into rows by weekday and columns by time of day.</p>
             </div>
             <div class="card-action white-text">
-                <p><i class="mdi-toggle-radio-button-on"></i>Click on time cells to update courses in the Treemap.</p>
+                <p><i class="mdi-toggle-radio-button-on"></i>Click on a blue rectangle to view the courses in session during that time.</p>
             </div>
           </div>
         </div>
@@ -72,11 +71,11 @@
           <h6>Treemap</h6>
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <p>Students are wondering why my course is always not in my department building. The second visualization below is named Treemap.</p>
-              <p>Treemap shows courses running in the buildings. The header represents buildings and departments and subdivided areas represent courses.
+              <p>Treemaps are a useful way to view heirarchial data. Here, the colored blocks represent majors. All the majors within a building are collected under the header label for that building. For your convenience, buildings who share their name or abbreviation with a major (e.g. "ME", "MSE") are identified with "(B)".</p>
+              <p>Want to see more detail about something? Click on it! Clicking zooms the view one "layer" deeper, showing more information about the item in question.</p>
             </div>
             <div class="card-action white-text">
-                <p><i class="mdi-toggle-radio-button-on"></i>Click on colorful rectangles to look into course description in the Treemap.</p>
+                <p><i class="mdi-toggle-radio-button-on"></i>Click on the colored rectangles to see more course information.</p>
             </div>
           </div>
         </div>
@@ -346,7 +345,7 @@
         colors = ["#ffffd9","#edf8b1","#c7e9b4","#7fcdbb","#41b6c4","#1d91c0","#225ea8","#253494","#081d58"], 
         // alternatively colorbrewer.YlGnBu[9]
         days = ["Mon", "Tue", "Wed", "Thr", "Fri"],
-        times = ["7a", "8a", "9a", "10a", "11a", "12a", "1p", "2p", "3p", "4p", "5p"];
+        times = ["7:30", "8:30", "9:30", "10:30", "11:30", "12:30", "1:30", "2:30", "3:30", "4:30", "5:30"];
 
         //console.log("G" + gridSize)
 
