--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h6>About</h6>
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <p>Have you ever wondered "why is my EE class meeting in Witherell? Who is using our building? How are engineering students distributed across campus?" Wonder no longer. KBT Inc. presents the Purdue engineering courses treemap! Just choose a time, and let our custom sorting algorithm show you where you can find engineers on Purdue's campus.</p>
+              <p>Have you ever wondered "why is my EE class meeting in Witherell? Who is using our building? How are engineering students distributed across campus?" Wonder no longer. KBT Inc. presents the Purdue engineering courses treemap for Spring 2015! Just choose a time, and let our custom sorting algorithm show you where you can find engineers on Purdue's campus.</p>
               <p>Your insight and user experience are important to us. Please leave your thoughts and suggestions below!</p>
             </div>
         </div>
