--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'visualizationproject'; // Required - Replace '<example>' with your forum shortname
+        var disqus_identifier = 'http://kbt-incorporated.github.io';
+        var disqus_title = 'visualizationproject';
+        var disqus_url = 'http://kbt-incorporated.github.io';
+
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
