--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         colors = ["#ffffd9","#edf8b1","#c7e9b4","#7fcdbb","#41b6c4","#1d91c0","#225ea8","#253494","#081d58"], 
         // alternatively colorbrewer.YlGnBu[9]
         days = ["Mon", "Tue", "Wed", "Thr", "Fri"],
-        times = ["7a", "8a", "9a", "10a", "11a", "12a", "1p", "2p", "3p", "4p", "5p"];
+        times = ["7:30", "8:30", "9:30", "10:30", "11:30", "12:30", "1:30", "2:30", "3:30", "4:30", "5:30"];
 
         //console.log("G" + gridSize)
 
