--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <nav>
       <div class="nav-wrapper" style="margin-left: 10px">
-        <a href="index.html" class="brand-logo"> KBT-Incorporated </a>
+        <a href="index.html" class="logo"> KBT-Incorporated </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="index.html">Home</a></li>
           <li><a href="team_member.html">Team members</a></li>
@@ -39,7 +39,7 @@
       </div>
     </nav>
     <div class="intro deep-orange lighten-2 z-depth-1">
-        <h1 class="grey-text text-lighten-5">Interactive Visualization</h1>
+        <h3 class="grey-text text-lighten-5">Interactive Visualization</h3>
         <h5 class="grey lighten-4 grey-text text-darken-1">Purdue Engineering Courses in the Buildings</h5>
     </div>
     <div class="container about #ef9a9a red lighten-3">
