Solve sorting problem & Add Sec information in CSV file
Solve sorting problem & Add Sec information in CSV file

--- a/index.html
+++ b/index.html
@@ -628,11 +628,11 @@
         if(selection == 3) { qDay = "M";  qTime = [1030, 1130]; }
         if(selection == 4) { qDay = "M";  qTime = [1130, 1230]; }
         if(selection == 5) { qDay = "M";  qTime = [1230, 1330]; }
-        if(selection == 6) { qDay = "M";  qTime = [130, 230]; }
-        if(selection == 7) { qDay = "M";  qTime = [230, 330]; }
-        if(selection == 8) { qDay = "M";  qTime = [330, 430]; }
-        if(selection == 9) { qDay = "M";  qTime = [430, 530]; }
-        if(selection == 10) { qDay = "M";  qTime = [530, 630]; }
+        if(selection == 6) { qDay = "M";  qTime = [1330, 1430]; }
+        if(selection == 7) { qDay = "M";  qTime = [1430, 1530]; }
+        if(selection == 8) { qDay = "M";  qTime = [1530, 1630]; }
+        if(selection == 9) { qDay = "M";  qTime = [1630, 1730]; }
+        if(selection == 10) { qDay = "M";  qTime = [1730, 1830]; }
 
         if(selection == 11) { qDay = "T";  qTime = [730, 830]; }
         if(selection == 12) { qDay = "T";  qTime = [830, 930]; }
@@ -640,11 +640,11 @@
         if(selection == 14) { qDay = "T";  qTime = [1030, 1130]; }
         if(selection == 15) { qDay = "T";  qTime = [1130, 1230]; }
         if(selection == 16) { qDay = "T";  qTime = [1230, 1330]; }
-        if(selection == 17) { qDay = "T";  qTime = [130, 230]; }
-        if(selection == 18) { qDay = "T";  qTime = [230, 330]; }
-        if(selection == 19) { qDay = "T";  qTime = [330, 430]; }
-        if(selection == 20) { qDay = "T";  qTime = [430, 530]; }
-        if(selection == 21) { qDay = "T";  qTime = [530, 630]; }
+        if(selection == 17) { qDay = "T";  qTime = [1330, 1430]; }
+        if(selection == 18) { qDay = "T";  qTime = [1430, 1530]; }
+        if(selection == 19) { qDay = "T";  qTime = [1530, 1630]; }
+        if(selection == 20) { qDay = "T";  qTime = [1630, 1730]; }
+        if(selection == 21) { qDay = "T";  qTime = [1730, 1830]; }
 
         if(selection == 22) { qDay = "W";  qTime = [730, 830]; }
         if(selection == 23) { qDay = "W";  qTime = [830, 930]; }
@@ -652,11 +652,11 @@
         if(selection == 25) { qDay = "W";  qTime = [1030, 1130]; }
         if(selection == 26) { qDay = "W";  qTime = [1130, 1230]; }
         if(selection == 27) { qDay = "W";  qTime = [1230, 1330]; }
-        if(selection == 28) { qDay = "W";  qTime = [130, 230]; }
-        if(selection == 29) { qDay = "W";  qTime = [230, 330]; }
-        if(selection == 30) { qDay = "W";  qTime = [330, 430]; }
-        if(selection == 31) { qDay = "W";  qTime = [430, 530]; }
-        if(selection == 32) { qDay = "W";  qTime = [530, 630]; }
+        if(selection == 28) { qDay = "W";  qTime = [1330, 1430]; }
+        if(selection == 29) { qDay = "W";  qTime = [1430, 1530]; }
+        if(selection == 30) { qDay = "W";  qTime = [1530, 1630]; }
+        if(selection == 31) { qDay = "W";  qTime = [1630, 1730]; }
+        if(selection == 32) { qDay = "W";  qTime = [1730, 1830]; }
 
         if(selection == 33) { qDay = "R";  qTime = [730, 830]; }
         if(selection == 34) { qDay = "R";  qTime = [830, 930]; }
@@ -664,11 +664,11 @@
         if(selection == 36) { qDay = "R";  qTime = [1030, 1130]; }
         if(selection == 37) { qDay = "R";  qTime = [1130, 1230]; }
         if(selection == 38) { qDay = "R";  qTime = [1230, 1330]; }
-        if(selection == 39) { qDay = "R";  qTime = [130, 230]; }
-        if(selection == 40) { qDay = "R";  qTime = [230, 330]; }
-        if(selection == 41) { qDay = "R";  qTime = [330, 430]; }
-        if(selection == 42) { qDay = "R";  qTime = [430, 530]; }
-        if(selection == 43) { qDay = "R";  qTime = [530, 630]; }
+        if(selection == 39) { qDay = "R";  qTime = [1330, 1430]; }
+        if(selection == 40) { qDay = "R";  qTime = [1430, 1530]; }
+        if(selection == 41) { qDay = "R";  qTime = [1530, 1630]; }
+        if(selection == 42) { qDay = "R";  qTime = [1630, 1730]; }
+        if(selection == 43) { qDay = "R";  qTime = [1730, 1830]; }
 
         if(selection == 44) { qDay = "F";  qTime = [730, 830]; }
         if(selection == 45) { qDay = "F";  qTime = [830, 930]; }
@@ -676,11 +676,11 @@
         if(selection == 47) { qDay = "F";  qTime = [1030, 1130]; }
         if(selection == 48) { qDay = "F";  qTime = [1130, 1230]; }
         if(selection == 49) { qDay = "F";  qTime = [1230, 1330]; }
-        if(selection == 50) { qDay = "F";  qTime = [130, 230]; }
-        if(selection == 51) { qDay = "F";  qTime = [230, 330]; }
-        if(selection == 52) { qDay = "F";  qTime = [330, 430]; }
-        if(selection == 53) { qDay = "F";  qTime = [430, 530]; }
-        if(selection == 54) { qDay = "F";  qTime = [530, 630]; }
+        if(selection == 50) { qDay = "F";  qTime = [1330, 1430]; }
+        if(selection == 51) { qDay = "F";  qTime = [1430, 1530]; }
+        if(selection == 52) { qDay = "F";  qTime = [1530, 1630]; }
+        if(selection == 53) { qDay = "F";  qTime = [1630, 1730]; }
+        if(selection == 54) { qDay = "F";  qTime = [1730, 1830]; }
 
 
         //qDay = "M";  
@@ -929,7 +929,7 @@
         });
     }
         
-    function parseTime(timeStr) {
+    /*function parseTime(timeStr) {
         timeStr.replace(":","");
         timeStr.replace(" ","");
         timeStr.split("-");
@@ -942,7 +942,7 @@
             d = parseInt(d) + addMe;
         });
         return timeStr;
-    }
+    }*/
 
     function timeQuery(tree, query) { //query is an array of the form [830, 1430]; MUST be in 24-hour time
 
@@ -1001,10 +1001,12 @@
         timeStr = timeStr.replace(":","");
         timeStr = timeStr.replace(":","");
         timeStr = timeStr.split("-");
-        if(timeStr[0].charAt[4] == 'p') {addMe = 1200;}
+        if(timeStr[0].charAt(5) == 'p' && timeStr[0].substring(0,2) !== '12' ) {addMe = 1200;}
+        //if(timeStr[0].charAt(5) == 'p') {addMe = 1200;} 
         timeStr[0] = timeStr[0].substr(0,4);
         timeStr[0] = parseInt(timeStr[0]) + addMe;
-        if(timeStr[1].charAt[4] == 'p') {addMe = 1200;}
+        if(timeStr[1].charAt(5) == 'p' && timeStr[1].substring(0,2) !== '12' ) {addMe = 1200;}
+        //if(timeStr[1].charAt(5) == 'p') {addMe = 1200;} 
         timeStr[1] = timeStr[1].substr(0,4);
         timeStr[1] = parseInt(timeStr[1]) + addMe;
         return timeStr;
