Adjust Location of day and time
Adjust Location of day and time

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               .data(times)
               .enter().append("text")
                 .text(function(d) { return d; })
-                .attr("x", function(d, i) { return i * (gridSize+11); })
+                .attr("x", function(d, i) { return (i * (gridSize+11))+5; })
                 .attr("y", 0)
                 .style("text-anchor", "middle")
                 .attr("transform", "translate(" + gridSize / 2 + ", -6)")
@@ -479,8 +479,8 @@
           svg.append("text")  
             .attr("class", "when")
             .text("[Monday, 7:30 am ~ 8:30 am]")
-            .attr("x", 170)
-            .attr("y", 210)
+            .attr("x", 130)
+            .attr("y", 185)
             .attr("font-family", "sans-serif")
             .attr("font-weight", "bold")
             .attr("font-size", "15px"); 
